--- a/docs/styl.css
+++ b/docs/styl.css
@@ -2,6 +2,17 @@
   box-sizing: border-box;
 }
 
+/* Lokalnie dołączone pliki z Font Awesome, żeby nie polegać na pobieraniu ich z
+   zewnętrznych stron.  Zapewniają ikonki Menu (na małych ekranach) i RSS. */
+@font-face {
+  font-family: 'Font Awesome 5 Free';
+  font-style: normal;
+  font-weight: 900;
+  src: url("fa-solid-900.woff2") format("woff2"),
+       url("fa-solid-900.woff") format("woff"),
+       url("fa-solid-900.ttf") format("truetype");
+}
+
 /* Pasek nawigacyjny */
 nav {
   position: fixed;
@@ -50,7 +61,7 @@ nav {
 .hamburger-menu-icon:before {
   display: inline-block;
   padding: 8px 16px;
-  font-family: FontAwesome;
+  font-family: 'Font Awesome 5 Free';
   font-size: inherit;
   vertical-align: middle;
   color: #990000;
@@ -73,7 +84,7 @@ nav {
 }
 
 .rss-icon:before {
-  font-family: FontAwesome;
+  font-family: 'Font Awesome 5 Free';
   content: "\f09e";
 }
 
