--- a/docs/styl.css
+++ b/docs/styl.css
@@ -1,464 +1,1 @@
-* {
-  box-sizing: border-box;
-}
-
-/* Lokalnie dołączone pliki z Font Awesome, żeby nie polegać na pobieraniu ich z
-   zewnętrznych stron.  Zapewniają ikonki Menu (na małych ekranach) i RSS. */
-@font-face {
-  font-family: 'Font Awesome 5 Free';
-  font-style: normal;
-  font-weight: 900;
-  src: url("fa-solid-900.woff2") format("woff2"),
-       url("fa-solid-900.woff") format("woff"),
-       url("fa-solid-900.ttf") format("truetype");
-}
-
-/* Pasek nawigacyjny */
-nav {
-  position: fixed;
-  width: 100%;
-  z-index: 1; /* Zawsze ponad zawartością strony */
-  top: 0;
-  left: 0;
-  font-family: sans-serif;
-}
-
-.navbar {
-  overflow: hidden; /* Rysuje kolorowe tło paska menu */
-  background-color: #ffffcc;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.20), 0 2px 10px 0 rgba(0,0,0,0.12);
-  font-size: 18px;
-  text-align: center; /* Centruje hamburger menu */
-}
-
-.large-navbar-button {
-  display: inline-block;
-  padding: 8px 16px;
-  width: auto;
-  float: left;
-  border: none; /* Brak przerw między sąsiednimi przyciskami */
-  text-align: center;
-  text-decoration: none;
-  color: black;
-}
-
-.small-navbar-button {
-  display: inline-block;
-  padding: 8px 16px;
-  width: 100%;
-  vertical-align: middle;
-  text-align: center;
-  text-decoration: none;
-  color: black;
-}
-
-.navbar-active-button, .large-navbar-button:hover:not(.navbar-active-button),
-.small-navbar-button:hover:not(.navbar-active-button) {
-  background-color: #990000;
-  color: white;
-}
-
-.hamburger-menu-icon:before {
-  display: inline-block;
-  padding: 8px 16px;
-  font-family: 'Font Awesome 5 Free';
-  font-size: inherit;
-  vertical-align: middle;
-  color: #990000;
-  content: "\f0c9";
-}
-
-.legacy-navbar-button {
-  float: right;
-}
-
-.rss-icon {
-  display: inline-block;
-  float: right;
-  color: #990000;
-}
-
-.rss-icon:hover {
-  background-color: #990000;
-  color: white;
-}
-
-.rss-icon:before {
-  font-family: 'Font Awesome 5 Free';
-  content: "\f09e";
-}
-
-.navbar-hide {
-  display: none;
-}
-
-.navbar-show {
-  display: block;
-}
-
-/* Nagłówek strony */
-header {
-  padding: 40px 0px 0px 0px; /* Obniża zawartość strony żeby menu nie zasłaniało */
-}
-
-img.logo {
-  max-width: 100%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* Treść strony */
-main {
-  max-width: 800px; /* Kolumna zmniejsza się na wąskich ekranach */
-  margin-left: auto;  /* Zapewnia wycentrowanie kolumny z tekstem */
-  margin-right: auto; /* Zapewnia wycentrowanie kolumny z tekstem */
-  font-family: sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  counter-reset: sources footnotes; /* Reset liczników */
-}
-
-/* Nagłówek sekcji.  Używany na stronach zbierających linki do recenzji żeby
-   podzielić je na kategorie.  Po .section-header zawsze powinno być
-   .section-body */
-.section-header {
-  text-align: center;
-  color: white;
-  font-size: 1.05em;
-  text-transform: uppercase;
-  background-color: #990000;
-  padding: 2px 0px 2px 0px;
-  font-family: inherit;
-  font-weight: normal;
-  margin: 0;
-}
-
-/* Podsekcje z materiałem źródłowym i przypisami używają tego samego
-   formatowania co zwykłe podsekcje. */
-.subsection-header, .sources-header, .footnotes-header {
-  text-align: center;
-  color: black;
-  font-size: 1.05em;
-  text-transform: uppercase;
-  background-color: #E6D190;
-  padding: 2px 0px 2px 0px;
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-family: inherit;
-  font-weight: normal;
-}
-
-/* Główna część sekcji.  Powinna być poprzedzona nagłówkiem .section-header */
-.section-body {
-  background-color: #ffffcc;
-  margin-bottom: 4px;
-  font-family: inherit;
-}
-
-.abstract {
-  /* color: black; */
-  margin: 0 0 0 1em;
-}
-
-/* Bardziej naturalne odstępy w przypadku list niepoprzedzonych akapitem
-   wstępu. */
-ul {
-  margin-top: 0;
-}
-
-/* Paragraf bez dolnego marginesu.  Do użycia dla ostatnich paragrafów głównej
-   sekcji w przypadku gdy nie ma pod nimi linków ani nagłówków podsekcji. */
-.no-bottom-margin {
-  margin-bottom: 0;
-}
-
-.todo {
-  background-color: red;
-}
-
-.ul-nested {
-  list-style-type: square;
-}
-
-/* Kolory linków na liście recenzji oraz do źródeł */
-a.link, a.local-link {
-  color: #990000;
-}
-
-a.link:visited, a.local-link:visited {
-  color: #990000;
-}
-
-a.link:hover, a.local-link:hover {
-  color: #cc9933;
-}
-
-.local-link {
-  text-decoration: none; /* Linki w ramach artykułu bez podkreślenia */
-}
-
-/* Centrowanie linku "Wstecz". */
-.go-back-link {
-  width: 30%;
-  text-align: center;
-  margin: auto;
-}
-
-/* Lista recenzji poprzedzona akapitem wstępu, wcięta względem tego akapitu. */
-.review-list {
-  padding-left: 1.5em;
-  list-style-type: none;
-  /* color: #876951; */
-}
-
-/* Lista recenzji bez wstępu, wcięta tak samo jak normalny akapit. */
-.standalone-review-list {
-  padding-left: 0em;
-  list-style-type: none;
-  margin-bottom: 0;
-}
-
-/* Cytaty */
-blockquote {
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  font-style: italic;
-  border-left: 4px solid #990000;
-  padding: 0 1em;
-  color: #213037;
-}
-
-/* Automatyczne dopisywanie słowa "Źródło" i nawiasów przy źródle cytatu. */
-.quote-source::before {
-  content: "(Źródło: ";
-}
-
-.quote-source::after {
-  content: ")";
-}
-
-.quote-source {
-  text-align: right; /* Źródło cytatu z prawej */
-}
-
-.source::before {
-  content: "(Źródło: ";
-}
-
-.source::after {
-  content: ")";
-}
-
-/* Formatowanie tytułów książek, filmów i gier */
-.book-title, .film-title, .game-title {
-  font-style: italic;
-}
-
-/* Duże obrazy */
-.thumbnail {
-  max-width: 700px; /* Szerokość obrazu taka sama jak cytatu */
-  text-align: center; /* wycentruj podpisy pod obrazkami */
-  /* Wyśrodkuj w poziomie */
-  margin-left: auto;
-  margin-right: auto;
-  /* Przy kilku obrazach pod rząd zminimalizuj przerwy między nimi */
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-figcaption {
-  /* Jeśli pomiędzy następującymi po sobie obrazami są podpisy, zadbaj o to żeby
-     przerwa między podpisem a następnym obrazem była wystarczająco duża. */
-  margin-bottom: 12pt;
-}
-
-.thumbnail img {
-  max-width: 100%; /* Zapobiegaj przepełnieniu obrazu */
-  height: auto;
-}
-
-/* Informacja o recenzowanej książce/grze/filmie  */
-.info-section {
-  display: flex; /* Potrzebne żeby zmieścić okładki koło siebie */
-  margin-bottom: 12px;
-}
-
-.info-contents {
-  list-style-type: none;
-  margin-right: auto; /* Jeśli z prawej jest okładka dosuń ją do prawego marginesu */
-  padding-left: 20px;
-  margin-top: 8px
-}
-
-.info-list-entry {
-  font-weight: bold;
-}
-
-.info-cover {
-  height: 16em;
-}
-
-/* Ostrzeżenie */
-.warning-title {
-  text-align: center;
-  color: white;
-  font-size: 1.05em;
-  text-transform: uppercase;
-  background-color: #CC0000;
-  padding: 2px 0px 2px 0px;
-  font-family: inherit;
-  margin: 0;
-}
-
-.warning-content {
-  font-weight: bold;
-  background-color: #f57979;
-  margin-bottom: 4px;
-  padding: 10px 24px 16px 24px;
-  font-family: inherit;
-  margin-top: 0;
-}
-
-/* Powiadomienie */
-.notification-title {
-  text-align: center;
-  color: white;
-  font-size: 1.05em;
-  text-transform: uppercase;
-  background-color: #C0A880;
-  padding: 2px 0px 2px 0px;
-  font-family: inherit;
-  margin: 0;
-}
-
-.notification-content {
-  font-weight: bold;
-  background-color: #e3c797;
-  margin-bottom: 4px;
-  padding: 10px 24px 16px 24px;
-  font-family: inherit;
-  margin-top: 0;
-}
-
-/* Adres mailowy, zakamuflowany po taniości przed robotami */
-
-.contact-mail::before {
-  content: "fremenzone";
-}
-
-.contact-mail::after {
-  content: "mailbox.org";
-}
-
-.contact-mail {
-  color: #990000;
-}
-
-.contact-mail:hover {
-   color: #cc9933;
-}
-
-/* Linki wsteczne używane przy źródłach i przypisach */
-.back-ref::before {
-  content: "↩︎";
-}
-
-/* Źródła mają automatycznie liczoną numerację w tekście i jedyne o co trzeba
-   potem zadbać to żeby ich kolejność na dole była taka sama jak w tekście. */
-.source-link {
-  counter-increment: sources;
-}
-
-.source-link:after {
-  content: "[" counter(sources) "]";
-}
-
-.dummy-source-link {
-  counter-increment: sources;
-}
-
-/* Formatowanie przypisów.  Przypisy mają automatycznie liczoną numerację w
-   tekście i jedyne o co trzeba potem zadbać to żeby ich kolejność na dole była
-   taka sama jak w tekście. */
-.footnote-link {
-  counter-increment: footnotes;
-  line-height: 1;
-}
-
-.footnote-link:after {
-  content: counter(footnotes);
-  vertical-align: super;
-  font-size: 0.8em;
-}
-
-.footnotes-list :target, .sources-list :target {
-  background: #FFC787; /* Podświetl kliknięty przypis/źródło */
-}
-
-/* Stopka strony */
-.footer {
-  text-align: center;
-  color: #999999;
-  font-family: sans-serif;
-}
-
-/* Skalowanie do dużego ekranu */
-@media screen and (min-width: 769px) {
-  /* Ukrywanie menu na dużym ekranie */
-  .navbar-hide-large {
-    display: none;
-  }
-
-  .section-body {
-    padding: 1.0em 2em 1.5em 2em;
-    text-align: justify;
-  }
-
-  p {
-    margin: 0 0 1em 0;
-  }
-
-  ul {
-    padding-left: 24px;
-  }
-}
-
-/* Skalowanie do małego ekranu */
-@media screen and (max-width: 768px) {
-  /* Ukrywanie menu na małym ekranie */
-  .navbar-hide-small {
-    display: none;
-  }
-
-  .section-body {
-    padding: 1em;
-    text-align: left;
-  }
-
-  p {
-    margin: 0 0.5em 0.75em 0.5em;
-  }
-
-  ul {
-    padding-left: 16px;
-  }
-
-  /* Wyświetl elementy nagłówka recenzji w pionie */
-  .info-section {
-    flex-direction: column;
-  }
-
-  /* Przesuń informacje w nagłówku na początek, daj ilustracje pod spód.  Działa
-     przy założeniu że są max. dwa elementy po lewej.  Z reguły jest tylko jeden
-     (okładka) */
-  .info-contents {
-     order: -2;
-  }
-
-  /* Centrowanie okładek */
-  .info-cover-small {
-    text-align: center;
-  }
-}
+*{box-sizing:border-box}@font-face{font-family:'font awesome 5 free';font-style:normal;font-weight:900;font-display:swap;src:url(fonts/fa-solid-900.woff2)format("woff2"),url(fonts/fa-solid-900.woff)format("woff");unicode-range:U+F09E,U+F0C9}nav{position:fixed;width:100%;z-index:1;top:0;left:0;font-family:sans-serif}.navbar{overflow:hidden;background-color:#ffc;box-shadow:0 2px 5px rgba(0,0,0,.2),0 2px 10px rgba(0,0,0,.12);font-size:18px;text-align:center}.large-navbar-button{display:inline-block;padding:8px 16px;width:auto;float:left;border:none;text-align:center;text-decoration:none;color:#000}.small-navbar-button{display:inline-block;padding:8px 16px;width:100%;vertical-align:middle;text-align:center;text-decoration:none;color:#000}.navbar-active-button,.large-navbar-button:hover:not(.navbar-active-button),.small-navbar-button:hover:not(.navbar-active-button){background-color:#900;color:#fff}.hamburger-menu-icon:before{display:inline-block;padding:8px 16px;font-family:'font awesome 5 free';font-size:inherit;vertical-align:middle;color:#900;content:"\f0c9"}.legacy-navbar-button{float:right}.rss-icon{display:inline-block;float:right;color:#900}.rss-icon:hover{background-color:#900;color:#fff}.rss-icon:before{font-family:'font awesome 5 free';content:"\f09e"}.navbar-hide{display:none}.navbar-show{display:block}header{padding:40px 0 0}img.logo{max-width:100%;display:block;margin-left:auto;margin-right:auto}main{max-width:800px;margin-left:auto;margin-right:auto;font-family:sans-serif;font-size:16px;line-height:1.5;counter-reset:sources footnotes}.section-header{text-align:center;color:#fff;font-size:1.05em;text-transform:uppercase;background-color:#900;padding:2px 0;font-family:inherit;font-weight:400;margin:0}.subsection-header,.sources-header,.footnotes-header{text-align:center;color:#000;font-size:1.05em;text-transform:uppercase;background-color:#e6d190;padding:2px 0;margin-top:0;margin-bottom:10px;font-family:inherit;font-weight:400}.section-body{background-color:#ffc;margin-bottom:4px;font-family:inherit}.abstract{margin:0 0 0 1em}ul{margin-top:0}.no-bottom-margin{margin-bottom:0}.todo{background-color:red}.ul-nested{list-style-type:square}a.link,a.local-link{color:#900}a.link:visited,a.local-link:visited{color:#900}a.link:hover,a.local-link:hover{color:#c93}.local-link{text-decoration:none}.go-back-link{width:30%;text-align:center;margin:auto}.review-list{padding-left:1.5em;list-style-type:none}.standalone-review-list{padding-left:0;list-style-type:none;margin-bottom:0}blockquote{max-width:700px;margin-left:auto;margin-right:auto;font-style:italic;border-left:4px solid #900;padding:0 1em;color:#213037}.quote-source::before{content:"(Źródło: "}.quote-source::after{content:")"}.quote-source{text-align:right}.title{font-style:italic}.thumbnail{max-width:700px;text-align:center;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0}figcaption{margin-bottom:12pt}.thumbnail img{max-width:100%;height:auto}.info-section{display:flex;margin-bottom:12px}.info-contents{list-style-type:none;margin-right:auto;padding-left:20px;margin-top:8px}.info-list-entry{font-weight:700}.info-cover{height:16em}.warning-title{text-align:center;color:#fff;font-size:1.05em;text-transform:uppercase;background-color:#c00;padding:2px 0;font-family:inherit;margin:0}.warning-content{font-weight:700;background-color:#f57979;margin-bottom:4px;padding:10px 24px 16px;font-family:inherit;margin-top:0}.contact-mail::before{content:"fremenzone"}.contact-mail::after{content:"mailbox.org"}.contact-mail{color:#900}.contact-mail:hover{color:#c93}.back-ref::before{content:"↩︎"}.source-link{counter-increment:sources}.source-link:after{content:"[" counter(sources)"]"}.footnote-link{counter-increment:footnotes;line-height:1}.footnote-link:after{content:counter(footnotes);vertical-align:super;font-size:.8em}.footnotes-list :target,.sources-list :target{background:#ffc787}.footer{text-align:center;color:#999;font-family:sans-serif}@media screen and (min-width:769px){.navbar-hide-large{display:none}.section-body{padding:1em 2em 1.5em;text-align:justify}p{margin:0 0 1em}ul{padding-left:24px}}@media screen and (max-width:768px){.navbar-hide-small{display:none}.section-body{padding:1em;text-align:left}p{margin:0 .5em .75em}ul{padding-left:16px}.info-section{flex-direction:column}.info-contents{order:-2}.info-cover-small{text-align:center}}
